kubernetes/apps/linkerd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-viz
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: merge
  labels:
    linkerd.io/extension: viz
    toolkit.fluxcd.io/tenant: sre-team
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-jaeger
  labels:
    linkerd.io/extension: jaeger
